# ConnextTriad

./: .clang-format  .editorconfig  .gitignore  ARCHITECTURE_DRAFT.md  Build_Ref.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODING_GUIDELINES.md  COPILOT_INSTRUCTIONS.md  DOMAIN_STANDARDS.md  DevGuide.md  PROJECT_ARCHITECTURE.md  README.md  TOPICS_AND_COMMANDS.md  WIN_DIFF_UNIX.md  agent_config.json  build_cmd_vxWorks  ipc_json_protocol_v1.0.md  ipc_json_protocol_v2.0.md  make_env_build_for_linux.md  vx_env.bat  개발가이드
.github/: CODING_GUIDELINES.md  DOMAIN_STANDARDS.md  PROJECT_ARCHITECTURE.md  TOPICS_AND_COMMANDS.md  copilot-instructions.md
.github/prompts/: bug-mincase.prompt.md  build-diagnose.prompt.md  ci-failure-triage.prompt.md  cmake-warning-to-fix.prompt.md  dead-code-removal.prompt.md  editorconfig-suggest.prompt.md  error-handling-standard.prompt.md  error-handling-unify.prompt.md  idl-diff-impact.prompt.md  idl-regenerate-playbook.prompt.md  interface-extraction.prompt.md  ipc-thread-safety-audit.prompt.md  ipc-wire-format-check.prompt.md  logging-structured.prompt.md  memleak-checklist.prompt.md  memory-audit.prompt.md  modernize-pass.prompt.md  msvc-linker-fix.prompt.md  naming-consistency.prompt.md  perf-microbench-plan.prompt.md  qos-validate.prompt.md  refactor-structure.prompt.md  registry-audit.prompt.md  router-path-trace.prompt.md  static-analysis-plan.prompt.md  test-scaffold.prompt.md  thread-safety-audit.prompt.md  topics-sync.prompt.md
ConnextControlUI/: CMakeLists.txt
ConnextControlUI/include/: actual_alarm_dialog.hpp  generic_form_dialog.hpp  mainwindow.hpp  rpc_envelope.hpp  xml_type_catalog.hpp
ConnextControlUI/src/: actual_alarm_dialog.cpp  form_builder.hpp  generic_form_dialog.cpp  main.cpp  mainwindow.cpp  value_collector.hpp  xml_type_catalog.cpp  xsd_form_parser.hpp
DkmRtpIpc/: CMakeLists.txt
DkmRtpIpc/include/: dkmrtp_ipc.hpp  dkmrtp_ipc_messages.hpp  dkmrtp_ipc_types.hpp  triad_log.hpp  triad_thread.hpp
DkmRtpIpc/src/: dkmrtp_ipc.cpp  triad_log.cpp
IdlKit/: CMakeLists.txt
IdlKit/idl/: AlarmMsg.idl  Alarms_PSM.idl  LDM_Common.idl  Nstel_PSM.idl  StringMsg.idl  UCMS_PSM.idl  Usage_And_Condition_Monitoring_PSM.idl
IdlKit/idl/xml/: AlarmMsg.xml  Alarms_PSM.xml  LDM_Common.xml  Nstel_PSM.xml  StringMsg.xml  UCMS_PSM.xml
Linux/: clean_project.sh  incremental_build.sh  preset_build.sh
RtpDdsGateway/: CMakeLists.txt  STATISTICS.md
RtpDdsGateway/cmake/: NgvaRtiddsgen.cmake
RtpDdsGateway/include/: Alarms_PSM_enum_utils.hpp  app_config.hpp  data_converter.hpp  dds_manager.hpp  dds_type_registry.hpp  dds_util.hpp  gateway.hpp  ipc_adapter.hpp  qos_store.hpp  qos_xml_helpers.hpp  register_macro.hpp  rti_logger_bridge.hpp  sample_factory.hpp  sample_guard.hpp  stats_manager.hpp  type_registry.hpp  type_traits.hpp
RtpDdsGateway/include/async/: async_event_processor.hpp  dds_receiver_interface.hpp  receiver_factory.hpp  sample_event.hpp  sample_handler.hpp  waitset_dispatcher.hpp
RtpDdsGateway/include/ngva/: ngva_config.hpp  ngva_dynamic_probe.hpp  ngva_handlers.hpp  ngva_qos_loader.hpp
RtpDdsGateway/include/rtpdds/: dds_manager_adapter.hpp
RtpDdsGateway/include/rtpdds/api/: idds_manager.hpp
RtpDdsGateway/src/: app_config.cpp  dds_manager.cpp  dds_manager_adapter.cpp  dds_manager_cleanup.cpp  dds_manager_entities.cpp  dds_manager_internal.hpp  dds_manager_io.cpp  dds_manager_qos.cpp  dds_manager_utils.cpp  dds_type_registry.cpp  dds_util.cpp  gateway.cpp  ipc_adapter.cpp  main.cpp  ngva_dynamic_probe.cpp  ngva_handlers.cpp  ngva_qos_loader.cpp  qos_store.cpp  qos_xml_helpers.cpp  rti_logger_bridge.cpp  sample_factory.cpp  sample_guard.cpp  stats_manager.cpp
RtpDdsGateway/src/async/: async_event_processor.cpp  receiver_factory.cpp  waitset_dispatcher.cpp
RtpDdsGateway/types/: AlarmMsg.idl  Alarms_PSM.idl  StringMsg.idl
Simulator/: README.md  integration_test.py  ipc_protocol.py  perf_config.json  perf_config_1.json  perf_config_2.json  perf_simulator.py  requirements.txt  run_scenario_test.py  test_runner.py
Simulator/samples/: Actual_Alarm.json  Cannon_Actuator_Control.json  Monitored_Entity_runBIT.json  alarm_msg.json
VxWorks/: Build_cmd  toolchain-vxworks-ppce6500.cmake  vx_cmake_build.cmd
VxWorks/RTI_sample/sample_vx_pubsub/: HelloWorld.idl  README.md
cmake/: Build_cmd  toolchain-vxworks-ppce6500.cmake
cmake/RTI_sample/sample_vx_pubsub/: CMakeLists.txt  main.cpp
cmake/RTI_sample/sample_vx_pubsub/src/: publisher.cpp  subscriber.cpp
common/: CMakeLists.txt  parser_client.cpp  parser_client.hpp  parser_loader.cpp  parser_loader.hpp  parser_plugin.h
docs/: BUILD_DESCRIPTIONS.md  LOG_ANALYSIS.md  PERFORMANCE_ROADMAP.md  RTI_QoS_XML_Guide.md  ipc_json_protocol_v3.0.md  ipc_protocol_schema_v2.json  ipc_protocol_schema_v3.json  set_qos_examples.md  xml_parsing_rule.md
examples/: README.md  ipc_cbor_example.py
examples/scenarios/: scenario1.json
ngva/: manifest.cmake
ngva/qos/: ngva_qos_profiles.xml
parsers/ngva/: CMakeLists.txt
parsers/ngva/include/: parser_core.hpp
parsers/ngva/src/: exports.cpp  parser_core.cpp
qos/: NGVA_QoS_Library.xml  NSTEL_QOS_PROFILE.xml  nstel_custom_qos.xml  qos_profiles.xml
script/: full_clean_rebuild.sh  full_reconfigure_rebuild.sh  reconfigure_only.sh
tools/: emit_autoreg.py  emit_jsonbind.py
tools/idl2json/: gen.py
tools/idl2json/templates/: registry.tmpl  struct_from.tmpl  struct_to.tmpl
